--- a/GameCatalogue/Podfile
+++ b/GameCatalogue/Podfile
@@ -30,4 +30,13 @@ target 'Home' do
   project '../Home/Home'
 end
 
+post_install do |installer|
+  installer.generated_projects.each do |project|
+    project.targets.each do |target|
+        target.build_configurations.each do |config|
+            config.build_settings['IPHONEOS_DEPLOYMENT_TARGET'] = '11.0'
+         end
+    end
+  end
+end
 
